fix: add meta data and fix layout bugs

--- a/src/features/home/request-sent/ui/request-sent.module.scss
+++ b/src/features/home/request-sent/ui/request-sent.module.scss
@@ -2,6 +2,7 @@
   padding: 17px;
   color: var(--greyscale-11);
   text-align: center;
+  font-family: 'Subjetivity', sans-serif;
 
   &__icon {
     margin: 0 auto;
