--- a/src/page-components/home/features/features.module.scss
+++ b/src/page-components/home/features/features.module.scss
@@ -2,6 +2,7 @@
   padding-top: 80px;
   padding-bottom: 40px;
   color: var(--greyscale-11);
+  overflow: hidden;
 
   &__container {
     position: relative;
