--- a/src/page-components/home/reviews/ui/review-slide/review-slide.module.scss
+++ b/src/page-components/home/reviews/ui/review-slide/review-slide.module.scss
@@ -22,6 +22,7 @@
   }
 
   &__reviewer-info {
+    margin-top: 5px;
     display: grid;
     grid-auto-flow: row;
     gap: 8px;
